<resources>
    <string name="app_name">Exness</string>

    <string name="menu_help">Помощь</string>
    <string name="menu_list">Валюты</string>
    <string name="menu_refresh">Обновить</string>
    <string name="settings_text">Выберите инструменты, сортируйте кнопками, для закрытия нажмите кнопку Назад</string>
    <string name="ok">Ok</string>
    <string name="cancel">Отмена</string>
    <string name="info">Просматривайте котировки валют в режиме онлайн. Для выбора и сортировки нажмите правую иконку. </string>
</resources>
