<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHelp"
        android:enabled="true"
        android:title="@string/menu_help"
        android:icon="@drawable/ic_help_outline_white_24px"
        app:showAsAction="always"
        android:visible="true" />

    <item
        android:id="@+id/menuRefresh"
        android:enabled="true"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_autorenew_white_24px"
        app:showAsAction="always"
        android:visible="true" />

    <item
        android:id="@+id/menuList"
        android:enabled="true"
        android:title="@string/menu_list"
        android:icon="@drawable/ic_list_white_24px"
        app:showAsAction="always"
        android:visible="true" />
</menu>