<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkgray"
        android:text="@string/settings_text"
        android:layout_marginBottom="@dimen/margin"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvSettings">

    </android.support.v7.widget.RecyclerView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnOk"
            android:text="@string/ok"
            android:layout_margin="@dimen/margin"
            />
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:layout_gravity="right"
            android:layout_margin="@dimen/margin"
            />
    </LinearLayout>
</LinearLayout>